Further UI changes. Add semi-transparent footer to AppHeader.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/HostPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/HostPage.xaml
@@ -11,7 +11,8 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     utils:PageOrientation.SupportedOrientations="Portrait">
 
-    <Grid>
+    <Grid x:Name="MainGrid"
+          Loaded="MainGrid_Loaded">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
@@ -21,7 +22,6 @@
                             Canvas.ZIndex="1"
                             Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
                             Opacity="{StaticResource AppHeaderOpacity}"
-                            Margin="0,20,0,0"
                             x:Name="AppHeader"/>
         <Frame Grid.Row="1"
                Background="Transparent"
