Fix PullToRefreshListView alignment.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
@@ -175,6 +175,7 @@
                                                 PullText="Przytrzymaj żeby odświeżyć..."
                                                 RefreshText="Puść żeby odświeżyć."
                                                 ArrowColor="White"
+                                                TranslateOffset="18"
                                                 ItemsSource="{Binding MirkoEntries}"
                                                 ItemTemplate="{StaticResource EntryTemplate}"
                                                 ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
