Fix StatusBar hiding/showing. Fix light theme.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/HostPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/HostPage.xaml
@@ -11,8 +11,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     utils:PageOrientation.SupportedOrientations="Portrait">
 
-    <Grid x:Name="MainGrid"
-          Loaded="MainGrid_Loaded">
+    <Grid x:Name="MainGrid">
         
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
