--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
@@ -175,7 +175,7 @@
                                                 Foreground="{ThemeResource EntryBodyForeground}"
                                                 PullText="Przytrzymaj żeby odświeżyć..."
                                                 RefreshText="Puść żeby odświeżyć."
-                                                ArrowColor="White"
+                                                ArrowColor="{ThemeResource LogoFill}"
                                                 TranslateOffset="18"
                                                 ItemsSource="{Binding MirkoEntries}"
                                                 ItemTemplate="{StaticResource EntryTemplate}"
