--- a/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Common.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Common.xaml
@@ -5,6 +5,13 @@
 
     <x:Double x:Key="AppBarOpacity">0.95</x:Double>
     <x:Double x:Key="AppHeaderOpacity">0.9</x:Double>
+    
     <SolidColorBrush x:Key="AppHeaderSelectionBrush" Color="#FF5917" />
+    <SolidColorBrush x:Key="SettingsBackgroundDark" Color="#1C1C1C" />
+    <SolidColorBrush x:Key="SettingsBackgroundLight" Color="White" />
+    <SolidColorBrush x:Key="PageBackgroundDark" Color="Black" />
+    <SolidColorBrush x:Key="PageBackgroundLight" Color="White" />
+
+    <Color x:Key="StatusBarForegroundLight">#3D9CDE</Color>
 
 </ResourceDictionary>
