--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
@@ -86,7 +86,8 @@
 
                 <MenuFlyoutItem Text="pokaż plusujących"
                                 Tag="voters"
-                                Click="MenuFlyoutItem_ShowVoters_Click"/>
+                                Click="MenuFlyoutItem_ShowVoters_Click"
+                                Visibility="{Binding VotersHidden, Converter={StaticResource BoolToVisibility}}"/>
 
                 <MenuFlyoutItem Text="odpowiedz"
                                 Tag="reply"
@@ -217,7 +218,7 @@
                        Grid.ColumnSpan="2"
                        Grid.Row="3"
                        Margin="5,0,0,0"
-                       utils:Properties.Voters="{Binding Data.Voters}"
+                       IsTextSelectionEnabled="False"
                        Visibility="Collapsed" />       
 
         <Grid x:Name="RightSpacer"
