Improve embed UX.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/EntryEmbed.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/EntryEmbed.xaml
@@ -20,7 +20,7 @@
           HorizontalAlignment="Stretch">
 
         <controls:CachedImage x:Name="Image"
-                              Uri="{Binding EmbedData.PreviewURL}"/>
+                              Embed="{Binding EmbedData}"/>
         
         <MediaElement x:Name="MediaElement"
                       MaxHeight="400"
