--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/ProfilePage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/ProfilePage.xaml
@@ -34,12 +34,12 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <Image Grid.Column="0"
-                       Grid.Row="0"
-                       Grid.RowSpan="3"
-                       Height="120"
-                       Width="120"
-                       Source="{Binding Data.AvatarURL}" />
+                <controls:CachedImage Grid.Column="0"
+                                      Grid.Row="0"
+                                      Grid.RowSpan="3"
+                                      Height="120"
+                                      Width="120"
+                                      URL="{Binding Data.AvatarURL}" />
 
                 <StackPanel Grid.Column="1"
                             Grid.Row="0"
