--- a/Mirko_v2/Mirko_v2.Shared/Controls/CachedImage.xaml
+++ b/Mirko_v2/Mirko_v2.Shared/Controls/CachedImage.xaml
@@ -19,7 +19,7 @@
         </Storyboard>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid x:Name="Grid">
         <ProgressRing x:Name="Ring"
                       Margin="0,10,0,0"
                       Background="Transparent"
