BUGFIX: fix shown voters carrying on to another entry in EntryPage

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
@@ -218,7 +218,9 @@
                        Grid.Row="3"
                        Margin="5,0,0,0"
                        IsTextSelectionEnabled="False"
-                       Visibility="Collapsed" />       
+                       Visibility="Collapsed"
+                       utils:Properties.Voters="{Binding Data.Voters}"
+                       utils:Properties.ShowVoters="{Binding ShowVoters}"/>       
 
         <Grid x:Name="RightSpacer"
               Grid.Column="3"
