UI: fix tiny blank space (VotersRTB)

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
@@ -218,6 +218,7 @@
                        Grid.Row="3"
                        Margin="5,0,0,0"
                        IsTextSelectionEnabled="False"
+                       Visibility="Collapsed"
                        utils:Properties.Voters="{Binding Data.Voters}"
                        utils:Properties.ShowVoters="{Binding ShowVoters}"/>       
 
