UI tweak in HashtagNotificationsPage.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/HashtagNotificationsPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/HashtagNotificationsPage.xaml
@@ -75,8 +75,10 @@
                                        Foreground="Gray"
                                        FontSize="12"
                                        VerticalAlignment="Center"
-                                       HorizontalAlignment="Left"
-                                       Text="{Binding Data.Date, Converter={StaticResource DateConverter}}" />
+                                       HorizontalAlignment="Left">
+                                <Run Text="{Binding Data.Date, Converter={StaticResource DateConverter}}"/>
+                                <Run Text="temu"/>
+                            </TextBlock>
 
                             <RichTextBlock Grid.Column="0"
                                            Grid.ColumnSpan="2"
