Multi-vote support.

--- a/Mirko_v2/Mirko_v2.Shared/App.xaml
+++ b/Mirko_v2/Mirko_v2.Shared/App.xaml
@@ -16,6 +16,7 @@
                 <ResourceDictionary Source="Resources/Converters.xaml"/>
                 <ResourceDictionary Source="Resources/Common.xaml"/>
                 <ResourceDictionary Source="Resources/PullToRefreshListView.xaml"/>
+                <ResourceDictionary Source="Resources/QKit.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
